# rattlesnake

./: README.md  pyproject.toml
src/rattlesnake/: cli.py
