[tool.poetry]
name = "rattlesnake"
version = "0.1.0"
description = ""
authors = ["Tom_Creusot <TomCreusot2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pydub = "^0.24.1"
multiprocess = "^0.70.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
